--- a/homepage/content/docs/index.mdx
+++ b/homepage/content/docs/index.mdx
@@ -4,27 +4,20 @@ title: quick start
 
 # 什么是 vibecape
 
-vibecape 是一个 **SaaS 应用搭建神器**，让开发者用一行命令就能快速搭建出完整的在线服务系统。
+vibecape 是一个 面向 AI vibecoder 的CLI开发工具。
 
-## 核心价值
+## 用户
 
-**问题：** 搭建一个完整的在线服务很复杂，需要几周甚至几个月
+AI native coder
 
-**解决：** 我们把复杂的事情简单化，让你专注于核心业务
-
-- **🎯 超简单**：一行命令解决复杂配置，不需要懂技术细节
-- **⚡ 超快速**：30 分钟搭建完成，不是 30 天
-- **🏆 超专业**：内置最佳实践，媲美大厂技术架构
-- **🔧 超灵活**：需要什么功能就加什么，不浪费资源
+Product Creator
 
 ## 主要特性
 
-- **⚡ 超快速** - 30 分钟搭建完成，不是 30 天。一行命令解决复杂配置，不需要懂技术细节。
-- **🎯 超简单** - 交互式命令行界面，智能选择最佳配置，内置最佳实践。
-- **🏆 超专业** - 内置最佳实践，媲美大厂技术架构，支持主流 SaaS 服务集成。
-- **🔧 超灵活** - 需要什么功能就加什么，模块化设计，支持自定义扩展。
-- **🌍 国际化** - 内置多语言支持，一键配置国际化，支持 next-intl 等主流方案。
-- **💳 支付集成** - 支持 Stripe、Paddle 等主流支付平台，订阅管理开箱即用。
+- 基于场景的模版快速集成（包括对应模版的文档， 用于AI 开发）
+- 深度集成AI，CLI本身可以使用 Agent
+- 可拆式 模块化 功能
+- 集成 node
 
 ## 一分钟上手
 
@@ -35,30 +28,18 @@ npm install -g vibecape
 # 创建新项目
 vibe create my-app
 
-# 添加用户认证
-vibe install auth --provider=clerk
-
-# 添加支付系统
-vibe install payments --provider=stripe
-
-# 项目就绪！
-npm run dev
+# 项目开始
+vibe run dev
 ```
 
-## 适用场景
+## 你也可以
 
-### 🚀 独立开发者
+```bash
+vibe chat
+[user]: 你知道今天的天气吗。
+[vibe]: 今天上海有雨。
+```
 
-快速验证想法，专注核心功能开发
-
-### 💼 初创公司
-
-快速搭建 MVP，节省开发时间和成本
-
-### 🏢 企业团队
-
-标准化项目结构，提高开发效率
-
-### 🎨 设计师转开发
-
-无需深入技术细节，快速实现创意
+```
+vibe hero
+```
