--- a/package/src/renderer/locales/en/common.json
+++ b/package/src/renderer/locales/en/common.json
@@ -117,6 +117,15 @@
     "serverError": "Server error, please try again later"
   },
   "workspace": {
+    "selectDocsRoot": "Select Documents Folder",
+    "selectDocsRootDesc": "Please select a folder to store all workspaces",
+    "docsRootSelected": "Documents folder selected",
+    "createWorkspace": "Create Workspace",
+    "workspaceName": "Workspace name",
+    "workspaceCreated": "Workspace created",
+    "workspaceDeleted": "Workspace deleted",
+    "deleteWorkspace": "Delete workspace",
+    "deleteConfirm": "Are you sure you want to delete workspace \"{{name}}\"? This action cannot be undone.",
     "openWorkspace": "Open Workspace",
     "workspaceReady": "Workspace is ready",
     "initializationFailed": "Initialization failed",
@@ -127,8 +136,51 @@
     "lastOpened": "Last opened: {{time}}",
     "openRecent": "Open workspace",
     "removeRecent": "Remove from list",
-    "removedFromHistory": "Removed from history"
+    "removedFromHistory": "Removed from history",
+    "noWorkspaceOpen": "No workspace open",
+    "settingsSaved": "Settings saved",
+    "basicInfo": "Basic Info",
+    "basicInfoDesc": "Configure basic workspace information",
+    "workspaceNameDesc": "Used to identify and display the workspace",
+    "assetSettings": "Asset Settings",
+    "assetSettingsDesc": "Configure asset upload and storage settings",
+    "assetUploadPriority": "Asset Upload Priority",
+    "assetUploadPriorityDesc": "Choose how images and other assets are uploaded",
+    "localFirst": "Local First",
+    "ossFirst": "Cloud Storage First",
+    "linkSettings": "Link Settings",
+    "linkSettingsDesc": "Link workspace with external documentation systems",
+    "linkEnabled": "Enable Link",
+    "linkEnabledDesc": "Enable to configure link target and paths",
+    "linkDisabled": "Disabled",
+    "linkEnabledOption": "Enabled",
+    "linkTarget": "Link Target",
+    "feishu": "Feishu Docs",
+    "docsPath": "Docs Directory Path",
+    "docsPathPlaceholder": "e.g., /Users/xxx/project/content/docs",
+    "docsPathDesc": "Documentation directory of the linked target",
+    "assetsPath": "Assets Directory Path",
+    "assetsPathPlaceholder": "e.g., /Users/xxx/project/public/images",
+    "assetsPathDesc": "Assets directory of the linked target",
+    "aiContext": "AI Context",
+    "llmTxt": "Prompt File (llm.txt)",
+    "llmTxtPlaceholder": "Enter AI context prompts to help AI understand the project...",
+    "llmTxtDesc": "This content will be used as context for AI conversations",
+    "import": "Import",
+    "importDirectory": "Import Directory",
+    "importMarkdown": "Import Markdown Files",
+    "importVibecape": "Import Vibecape Workspace",
+    "importSuccess": "Successfully imported {{count}} documents"
   },
+  "sidebar": {
+    "docs": "Docs",
+    "toc": "TOC",
+    "workspace": "Settings"
+  },
+  "save": "Save",
+  "cancel": "Cancel",
+  "create": "Create",
+  "delete": "Delete",
   "unfindTitle": "No related content found",
   "unfindDesc": "Try searching with different keywords",
   "noContent": "No content",
