--- a/package/src/renderer/locales/en/settings.json
+++ b/package/src/renderer/locales/en/settings.json
@@ -19,6 +19,10 @@
   "proxyAddress": "Proxy Address",
   "proxyPlaceholder": "e.g.: http://127.0.0.1:7890",
   "proxySupport": "Supports HTTP, HTTPS proxy addresses",
+  "workspaceStorage": "Workspace Storage",
+  "workspaceStorageDesc": "Configure the storage location for workspace files",
+  "docsRoot": "Documents Root",
+  "docsRootDesc": "All workspaces will be stored in this directory",
   "cloudStorage": "Cloud Storage",
   "cloudStorageDesc": "Configure cloud object storage service for storing images, documents and other resources",
   "enableCloudStorage": "Enable Cloud Storage",
@@ -45,7 +49,7 @@
   "addProviderSuccess": "Provider added successfully",
   "updateProviderSuccess": "Provider updated successfully",
   "saveProviderFailed": "Failed to save Provider",
-  "deleteProvider": "Are you sure you want to delete Provider \"{name}\"?",
+  "deleteProvider": "Are you sure you want to delete Provider \"{{name}}\"?",
   "deleteProviderSuccess": "Provider deleted successfully",
   "deleteProviderFailed": "Failed to delete Provider",
   "modelManagement": "Model Management",
@@ -58,7 +62,7 @@
   "addModelSuccess": "Model added successfully",
   "updateModelSuccess": "Model updated successfully",
   "saveModelFailed": "Failed to save model",
-  "deleteModel": "Are you sure you want to delete model \"{name}\"?",
+  "deleteModel": "Are you sure you want to delete model \"{{name}}\"?",
   "deleteModelSuccess": "Model deleted successfully",
   "deleteModelFailed": "Failed to delete model",
   "defaultModelConfig": "Default Model Configuration",
@@ -112,13 +116,13 @@
   "importFromDocsDesc": "Import all MDX files from docs directory to database.",
   "importWarning": "Note: This will overwrite existing documents in the database.",
   "confirmImport": "Confirm Import",
-  "importSuccess": "Successfully imported {count} documents",
+  "importSuccess": "Successfully imported {{count}} documents",
   "importFailed": "Import failed",
   "exportToDocs": "Export to docs",
   "exportToDocsDesc": "Export documents from database to docs directory.",
   "exportWarning": "Note: This will overwrite existing files in the docs directory.",
   "confirmExport": "Confirm Export",
-  "exportSuccess": "Successfully exported {count} documents",
+  "exportSuccess": "Successfully exported {{count}} documents",
   "exportFailed": "Export failed",
   "newDoc": "New Document",
   "openInFinder": "Open in Finder",
@@ -129,7 +133,7 @@
   "createFailed": "Creation failed",
   "create": "Create",
   "confirmDelete": "Confirm Delete",
-  "deleteDocConfirm": "Are you sure you want to delete {title}?",
+  "deleteDocConfirm": "Are you sure you want to delete {{title}}?",
   "deleteDocChildrenWarning": "All child documents will also be deleted.",
   "deleted": "Deleted",
   "deleteFailed": "Delete failed",
