--- a/package/src/renderer/locales/zh-CN/common.json
+++ b/package/src/renderer/locales/zh-CN/common.json
@@ -117,6 +117,15 @@
     "serverError": "服务器错误,请稍后再试"
   },
   "workspace": {
+    "selectDocsRoot": "选择文档目录",
+    "selectDocsRootDesc": "请选择一个目录来存储所有工作区",
+    "docsRootSelected": "文档目录已设置",
+    "createWorkspace": "新建工作区",
+    "workspaceName": "工作区名称",
+    "workspaceCreated": "工作区已创建",
+    "workspaceDeleted": "工作区已删除",
+    "deleteWorkspace": "删除工作区",
+    "deleteConfirm": "确定要删除工作区 \"{{name}}\" 吗？此操作不可撤销。",
     "openWorkspace": "打开工作区",
     "workspaceReady": "工作区已就绪",
     "initializationFailed": "初始化失败",
@@ -127,8 +136,51 @@
     "lastOpened": "上次打开：{{time}}",
     "openRecent": "打开工作区",
     "removeRecent": "从列表移除",
-    "removedFromHistory": "已从历史记录移除"
+    "removedFromHistory": "已从历史记录移除",
+    "noWorkspaceOpen": "未打开工作区",
+    "settingsSaved": "设置已保存",
+    "basicInfo": "基本信息",
+    "basicInfoDesc": "设置工作区的基本信息",
+    "workspaceNameDesc": "用于标识和显示工作区",
+    "assetSettings": "资源设置",
+    "assetSettingsDesc": "配置资源上传和存储相关设置",
+    "assetUploadPriority": "资源上传优先级",
+    "assetUploadPriorityDesc": "选择图片等资源的上传方式",
+    "localFirst": "本地优先",
+    "ossFirst": "云存储优先",
+    "linkSettings": "关联配置",
+    "linkSettingsDesc": "将工作区与外部文档系统关联",
+    "linkEnabled": "启用关联",
+    "linkEnabledDesc": "开启后可配置关联目标和路径",
+    "linkDisabled": "未启用",
+    "linkEnabledOption": "已启用",
+    "linkTarget": "关联目标",
+    "feishu": "飞书文档",
+    "docsPath": "文档目录路径",
+    "docsPathPlaceholder": "例如: /Users/xxx/project/content/docs",
+    "docsPathDesc": "关联目标的文档存储目录",
+    "assetsPath": "资源目录路径",
+    "assetsPathPlaceholder": "例如: /Users/xxx/project/public/images",
+    "assetsPathDesc": "关联目标的资源存储目录",
+    "aiContext": "AI 上下文",
+    "llmTxt": "提示词文件 (llm.txt)",
+    "llmTxtPlaceholder": "输入 AI 上下文提示词，帮助 AI 更好地理解项目...",
+    "llmTxtDesc": "此内容将作为 AI 对话的上下文，帮助 AI 理解项目背景",
+    "import": "导入",
+    "importDirectory": "导入目录",
+    "importMarkdown": "导入 Markdown 文件",
+    "importVibecape": "导入 Vibecape 工作空间",
+    "importSuccess": "成功导入 {{count}} 个文档"
   },
+  "sidebar": {
+    "docs": "文档",
+    "toc": "目录",
+    "workspace": "设置"
+  },
+  "save": "保存",
+  "cancel": "取消",
+  "create": "创建",
+  "delete": "删除",
   "unfindTitle": "未找到相关内容",
   "unfindDesc": "尝试使用不同的关键词搜索",
   "noContent": "暂无内容",
