--- a/package/src/renderer/locales/zh-CN/settings.json
+++ b/package/src/renderer/locales/zh-CN/settings.json
@@ -19,6 +19,10 @@
   "proxyAddress": "代理地址",
   "proxyPlaceholder": "例如：http://127.0.0.1:7890",
   "proxySupport": "支持 HTTP、HTTPS 代理地址",
+  "workspaceStorage": "工作区存储",
+  "workspaceStorageDesc": "配置工作区文件的存储位置",
+  "docsRoot": "文档根目录",
+  "docsRootDesc": "所有工作区将存储在此目录下",
   "cloudStorage": "云存储",
   "cloudStorageDesc": "配置云端对象存储服务，用于存储图片、文档等资源",
   "enableCloudStorage": "启用云存储",
@@ -45,7 +49,7 @@
   "addProviderSuccess": "添加 Provider 成功",
   "updateProviderSuccess": "更新 Provider 成功",
   "saveProviderFailed": "保存 Provider 失败",
-  "deleteProvider": "确定要删除 Provider \"{name}\" 吗？",
+  "deleteProvider": "确定要删除 Provider \"{{name}}\" 吗？",
   "deleteProviderSuccess": "Provider 删除成功",
   "deleteProviderFailed": "删除 Provider 失败",
   "modelManagement": "模型管理",
@@ -58,7 +62,7 @@
   "addModelSuccess": "添加模型成功",
   "updateModelSuccess": "更新模型成功",
   "saveModelFailed": "保存模型失败",
-  "deleteModel": "确定要删除模型\"{name}\"吗？",
+  "deleteModel": "确定要删除模型\"{{name}}\"吗？",
   "deleteModelSuccess": "模型删除成功",
   "deleteModelFailed": "删除模型失败",
   "defaultModelConfig": "默认模型配置",
@@ -112,13 +116,13 @@
   "importFromDocsDesc": "将从 docs 目录导入所有 MDX 文件到数据库。",
   "importWarning": "注意：这将覆盖数据库中的现有文档。",
   "confirmImport": "确认导入",
-  "importSuccess": "成功导入 {count} 个文档",
+  "importSuccess": "成功导入 {{count}} 个文档",
   "importFailed": "导入失败",
   "exportToDocs": "导出到 docs",
   "exportToDocsDesc": "将数据库中的文档导出到 docs 目录。",
   "exportWarning": "注意：这将覆盖 docs 目录中的现有文件。",
   "confirmExport": "确认导出",
-  "exportSuccess": "成功导出 {count} 个文档",
+  "exportSuccess": "成功导出 {{count}} 个文档",
   "exportFailed": "导出失败",
   "newDoc": "新建文档",
   "openInFinder": "在 Finder 中打开",
@@ -129,7 +133,7 @@
   "createFailed": "创建失败",
   "create": "创建",
   "confirmDelete": "确认删除",
-  "deleteDocConfirm": "确定要删除 {title} 吗？",
+  "deleteDocConfirm": "确定要删除 {{title}} 吗？",
   "deleteDocChildrenWarning": "该文档下的所有子文档也会被删除。",
   "deleted": "已删除",
   "deleteFailed": "删除失败",
