--- a/package/src/renderer/locales/en/settings.json
+++ b/package/src/renderer/locales/en/settings.json
@@ -157,5 +157,27 @@
   "showToc": "Show Table of Contents",
   "showDocTree": "Show Document Tree",
   "noDocOpen": "Please open a document first",
-  "noHeadings": "No headings in current document"
+  "noHeadings": "No headings in current document",
+  "mcp": "MCP",
+  "mcpConfig": "MCP Configuration",
+  "mcpConfigDesc": "Configure Model Context Protocol (MCP) servers to extend AI capabilities",
+  "enableMCP": "Enable MCP",
+  "enableMCPDesc": "Connect to MCP servers for additional tools and resources",
+  "mcpServers": "MCP Servers",
+  "mcpServersDesc": "Manage configured MCP servers",
+  "mcpAddServer": "Add Server",
+  "mcpNoServers": "No MCP servers configured yet, click \"Add Server\" to get started",
+  "mcpUnnamedServer": "Unnamed Server",
+  "mcpPasteJsonDesc": "Paste MCP configuration JSON, supports full format or single server config",
+  "mcpJsonPlaceholder": "{\n  \"mcpServers\": {\n    \"server-name\": {\n      \"command\": \"npx\",\n      \"args\": [\"-y\", \"@example/mcp-server\"]\n    }\n  }\n}",
+  "mcpInvalidJson": "Invalid JSON format or no valid MCP server configuration found",
+  "mcpAddServerSuccess": "MCP server added successfully",
+  "mcpEditServer": "Edit Server",
+  "mcpUpdateServerSuccess": "MCP server updated successfully",
+  "mcpReload": "Reconnect",
+  "mcpReloadSuccess": "MCP servers reconnected",
+  "mcpConnectSuccess": "Connected to {{name}}",
+  "mcpConnectFailed": "Connection failed",
+  "mcpTools": "Available Tools",
+  "mcpToolsDesc": "Tools provided by connected MCP servers"
 }
