--- a/package/src/renderer/locales/zh-CN/settings.json
+++ b/package/src/renderer/locales/zh-CN/settings.json
@@ -157,5 +157,27 @@
   "showToc": "显示目录",
   "showDocTree": "显示文档树",
   "noDocOpen": "请先打开一个文档",
-  "noHeadings": "当前文档没有标题"
+  "noHeadings": "当前文档没有标题",
+  "mcp": "MCP",
+  "mcpConfig": "MCP 配置",
+  "mcpConfigDesc": "配置 Model Context Protocol (MCP) 服务器，扩展 AI 能力",
+  "enableMCP": "启用 MCP",
+  "enableMCPDesc": "开启后可连接 MCP 服务器获取额外工具和资源",
+  "mcpServers": "MCP 服务器",
+  "mcpServersDesc": "管理已配置的 MCP 服务器",
+  "mcpAddServer": "添加服务器",
+  "mcpNoServers": "还没有配置 MCP 服务器，点击\"添加服务器\"开始吧",
+  "mcpUnnamedServer": "未命名服务器",
+  "mcpPasteJsonDesc": "粘贴 MCP 配置 JSON，支持完整格式或单个服务器配置",
+  "mcpJsonPlaceholder": "{\n  \"mcpServers\": {\n    \"server-name\": {\n      \"command\": \"npx\",\n      \"args\": [\"-y\", \"@example/mcp-server\"]\n    }\n  }\n}",
+  "mcpInvalidJson": "JSON 格式无效或未找到有效的 MCP 服务器配置",
+  "mcpAddServerSuccess": "MCP 服务器添加成功",
+  "mcpEditServer": "编辑服务器",
+  "mcpUpdateServerSuccess": "MCP 服务器更新成功",
+  "mcpReload": "重新连接",
+  "mcpReloadSuccess": "MCP 服务器已重新连接",
+  "mcpConnectSuccess": "已连接到 {{name}}",
+  "mcpConnectFailed": "连接失败",
+  "mcpTools": "可用工具",
+  "mcpToolsDesc": "已连接的 MCP 服务器提供的工具"
 }
