--- a/package/src/renderer/lib/locales/en/editor.json
+++ b/package/src/renderer/lib/locales/en/editor.json
@@ -67,6 +67,7 @@
     "italic": "Italic",
     "code": "Code",
     "link": "Link",
+    "quote": "Quote to Chat",
     "ai": "AI"
   },
   "polish": {
