--- a/homepage/content/docs/index.mdx
+++ b/homepage/content/docs/index.mdx
@@ -1,49 +1,28 @@
 ---
-title: Quick Start
-description: Get started with vibecape in disconnected environments or cloud workspaces.
+title: Introduction
+description: Welcome to Vibecape - The AI-Powered Creative Writing Studio.
 ---
 
 # Introduction
 
-**vibecape** is the definitive CLI toolchain for the AI-native developer. It bridges the gap between terminal-based workflows and modern AI coding agents.
+**Vibecape** (formerly Jezzlab) is a local-first creative writing studio designed for novelists, screenwriters, and world-builders who want to collaborate with AI without sacrificing privacy or control.
 
-## Who is this for?
+## Why Vibecape?
 
-- **AI-Native Coders**: Developers who use LLMs (Claude, GPT-4) as their primary coding engine.
-- **Product Creators**: Makers building SaaS, apps, or tools who need production-ready infrastructure instantly.
+Traditional text editors treat stories as linear strings of text. **Vibecape treats stories as worlds.**
+
+- **Context-Aware AI**: The AI knows your characters, locations, and lore. It doesn't just autocomplete text; it suggests plot points that fit your established world logic.
+- **Visual Orchestration**: Manage timelines, character relationships, and story beats on an infinite canvas.
+- **Local & Private**: Your magnum opus stays on your machine. We don't train on your data.
 
 ## Key Features
 
-- **Template scaffolding**: Launch production-ready stacks with comprehensive documentation optimized for AI consumption.
-- **Agent Integration**: A CLI that speaks "Agent". Pipe context directly to your AI tools.
-- **Modular Architecture**: Add/remove capabilities (Auth, Database, Payments) via `vibe add`.
-- **Node.js Integrated**: Built on the ecosystem you already know.
+- **World Bible**: A structured database for your lore that the AI actively references.
+- **Dynamic Personas**: Configure AI writing partners for different needs (e.g., "Ruthless Editor", "Imaginative Co-author", "Loremaster").
+- **Focus Mode**: A distraction-free writing environment with typewriter scrolling and ambient sounds.
 
 ## Getting Started
 
-Get up and running in less than 60 seconds.
-
-```bash
-# Global installation
-npm install -g vibecape
-
-# Initialize a new project
-vibe init my-app
-
-# Start the development server
-vibe run dev
-```
-
-## AI Interactions
-
-Vibecape is designed to be conversational.
-
-```bash
-# Ask questions about your project context
-vibe chat "How do I add a new API route?"
-```
-
-```bash
-# Generate a new feature implementation plan
-vibe hero "Plan a user authentication flow"
-```
+1. **[Download the latest release](https://github.com/wangenius/vibecape/releases/latest)** for macOS.
+2. Install the application (drag to Applications folder).
+3. Open Vibecape and create your first "World".
